--- a/www/views/layout.phtml
+++ b/www/views/layout.phtml
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="cz">
 <head>
+<base href="/" />
+        <meta charset="UTF-8" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>POSPAK's Universal Login | <?=$title?></title>
