fucking skill issue

--- a/www/views/layout.phtml
+++ b/www/views/layout.phtml
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html lang="cz">
+<html lang="cs-cz">
 <head>
-<base href="/" />
-        <meta charset="UTF-8" />
-    <meta charset="UTF-8">
+    <base href="/" />
+    <meta charset="UTF-8" />
+    <meta name="description" content="<?= $description ?>" />
+        <meta name="keywords" content="<?= $keywords ?>" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>POSPAK's Universal Login | <?=$title?></title>
     <link rel="stylesheet" href="pulStyles.css">
