--- a/www/views/layout.phtml
+++ b/www/views/layout.phtml
@@ -7,7 +7,7 @@
         <meta name="keywords" content="<?= $keywords ?>" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>POSPAK's Universal Login | <?=$title?></title>
-    <link rel="stylesheet" href="pulStyles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
