--- a/www/styles.css
+++ b/www/styles.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    
+    text-decoration: none;
 }
 
 :root{
@@ -36,7 +36,7 @@ body{
 .mainTitle::after{
     content: '';
     display: block;
-    width: 100px;
+    width: 80%;
     height: 2px;
     background-color: #02f869;
     margin: 10px auto;
