--- a/www/views/layout.phtml
+++ b/www/views/layout.phtml
@@ -6,6 +6,7 @@
     <meta name="description" content="<?= $description ?>" />
         <meta name="keywords" content="<?= $keywords ?>" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
     <title>POSPAK's Universal Login | <?=$title?></title>
     <link rel="stylesheet" href="styles.css">
 </head>
