--- a/www/styles.css
+++ b/www/styles.css
@@ -36,7 +36,7 @@ body{
 .mainTitle::after{
     content: '';
     display: block;
-    width: 34.589654%;
+    width: 1500.0252423px;
     height: 2px;
     background-color: #02f869;
     margin: 10px auto;
