--- a/www/styles.css
+++ b/www/styles.css
@@ -53,5 +53,13 @@ a{
     color: var(--text-color);
 }
 
+.smallLink::before{
+    content: '';
+    display: block;
+    width: 500.0252423px;
+    height: 2px;
+    background-color: #02f869;
+    margin: 10px auto;
+}
 
 
