--- a/www/views/layout.phtml
+++ b/www/views/layout.phtml
@@ -16,10 +16,10 @@
         <h1 class="mainTitle">
             POSPAK's Universal Login
         </h1>
-        <h2>
+        <h3>
             Jednotné bezpečné přihlášení
-        </h2>
-        <small>
+        </h3>
+        <small class="smallLink">
             Site by POSPÁK 65
         </small>
     </a>
