--- a/www/styles.css
+++ b/www/styles.css
@@ -62,4 +62,54 @@ a{
     margin: 10px auto;
 }
 
+/************footer**************/
+.footer {
+    background-color: rgba(0,0,0,0.6629026610644257);
+    color: white;
+    padding: 20px 0;
+    text-align: center;
+    bottom: 0;
+    top: 100%;
+    width: 100%;
+    border-radius: 10px;
+    backdrop-filter: blur(10px);
+    
+}
+
+.bg{
+    background: var(--gradient);
+    border-radius: 10px;
+    margin: 0 auto;
+    display: block;
+}
+
+.footer::after{
+    content: "© #citrakIT3 2024 Site by POSPAK 65 (& Famek)";
+    display: block;
+    color: white;
+    width: auto;
+    height: auto;
+    background: transparent;
+    top: 5px;
+    margin: 0 auto;
+}
+
+.social-links {
+    margin-bottom: 10px;
+}
+
+.social-icon {
+    display: inline-block;
+    margin: 0 10px;
+    width: 32px;
+    height: 32px;
+}
+
+/* .footer-text {
+    font-size: 0.8rem;
+    margin-top: 10px;
+    color: white;
+} */
+
+
 
