--- a/www/styles.css
+++ b/www/styles.css
@@ -84,7 +84,7 @@ a{
 }
 
 .footer::after{
-    content: "© #citrakIT3 2024 Site by POSPAK 65 (& Famek)";
+    content: "©POSPAK 65 2024";
     display: block;
     color: white;
     width: auto;
