--- a/www/views/layout.phtml
+++ b/www/views/layout.phtml
@@ -26,10 +26,10 @@
     </header>
     <br clear="both" />
     
-
+<main>
 <?php $this->controler->viewListing();
 ?>  
-
+</main>
 <?php include 'footer.php'; ?>
 </body>
 </html>
