--- a/www/views/login.phtml
+++ b/www/views/login.phtml
@@ -1,6 +1,7 @@
 <form action="" method="post">
     <input type="text" name="username" id="">
     <input type="password" name="password" id="">
+    <input type="submit" value="Přihlásit se">
 </form>
 <?php
 
