--- a/www/styles.css
+++ b/www/styles.css
@@ -149,6 +149,7 @@ input[type="password"]{
     margin: 10px 0;
     border-radius: 5px;
     border: 1px solid #02f869;
+    background: transparent;
 }
 input[type="submit"]{
     width: 100%;
@@ -162,3 +163,21 @@ input[type="submit"]{
 }
 
 
+/************Grid layout (60% chatGPT)**************/
+.container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 10px;
+}
+
+.twoContainer {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 10px;
+}
+.column {
+    padding: 10px;
+
+}
+
+/***********************************************/
