--- a/www/views/login.phtml
+++ b/www/views/login.phtml
@@ -1,8 +1,15 @@
+<div class="container">
+<h1>Přihlášení</h1>
+<div class="column"></div>
+<div class="column">
+
 <form action="" method="post">
     <input type="text" name="username" id="">
     <input type="password" name="password" id="">
     <input type="submit" value="Přihlásit se">
 </form>
+</div>
+<div class="column"></div>
 <?php
 
 if(!isset($url)&& $url !="skipaIs"):
@@ -10,4 +17,4 @@ if(!isset($url)&& $url !="skipaIs"):
     <p>
         Jsi tu novy? <a href="register">Zaregistruj se!</a>
     </p>
-    <?php endif; ?>
+    <?php endif; ?></div>
