--- a/www/styles.css
+++ b/www/styles.css
@@ -142,6 +142,7 @@ input[type="text"]{
     margin: 10px 0;
     border-radius: 5px;
     border: 1px solid #02f869;
+    background: transparent;
 }
 input[type="password"]{
     width: 100%;
