takhle možná lepší

--- a/www/views/login.phtml
+++ b/www/views/login.phtml
@@ -7,8 +7,7 @@
     <input type="password" name="password" id="">
     <input type="submit" value="Přihlásit se">
 </form>
-</div>
-<div class="column"></div>
+
 <?php
 
 if(!isset($url)&& $url !="skipaIs"):
@@ -16,4 +15,6 @@ if(!isset($url)&& $url !="skipaIs"):
     <p>
         Jsi tu novy? <a href="register">Zaregistruj se!</a>
     </p>
-    <?php endif; ?></div>
+    <?php endif; ?>
+    </div>
+<div class="column"></div></div>
