| tato mrdka tam nepatří

--- a/www/views/main.phtml
+++ b/www/views/main.phtml
@@ -9,4 +9,4 @@
 <a href="http://pospaklyrics.batcave.net">PospakLyrics |</a>
 <a href="http://mimajspocreate.batcave.net">MIMAJSPO Create |</a>
 <a href="https://skipa-is.skauting.cz">Škípa-Is |</a>
-<a href="http://strava-citrak.125mb.com">CitrakStrava |</a>
+<a href="http://strava-citrak.125mb.com">CitrakStrava</a>
