--- a/www/views/login.phtml
+++ b/www/views/login.phtml
@@ -13,7 +13,7 @@
 if(!isset($url)&& $url !="skipaIs"):
     ?>
     <p>
-        Jsi tu nový? <a href="register">Zaregistruj se!</a>
+        Jsi tu nový? <a href="register" class="links">Zaregistruj se!</a>
     </p>
     <?php endif; ?>
     </div>
