--- a/www/views/main.phtml
+++ b/www/views/main.phtml
@@ -5,8 +5,8 @@
     Pokud jste se dostali sem, vyberte si prosím z níže uvedených odkazů, kam chcete pokračovat.
 </h3>
 <br><br>
-<a href="http://pospaktube.batcave.net">PospakTube |</a>
-<a href="http://pospaklyrics.batcave.net">PospakLyrics |</a>
-<a href="http://mimajspocreate.batcave.net">MIMAJSPO Create |</a>
-<a href="https://skipa-is.skauting.cz">Škípa-Is |</a>
-<a href="http://strava-citrak.125mb.com">CitrakStrava</a>
+<a href="http://pospaktube.batcave.net" class="links">PospakTube |</a>
+<a href="http://pospaklyrics.batcave.net" class="links">PospakLyrics |</a>
+<a href="http://mimajspocreate.batcave.net" class="links">MIMAJSPO Create |</a>
+<a href="https://skipa-is.skauting.cz" class="links">Škípa-Is |</a>
+<a href="http://strava-citrak.125mb.com" class="links">CitrakStrava</a>
