--- a/www/views/main.phtml
+++ b/www/views/main.phtml
@@ -8,5 +8,5 @@
 <a href="http://pospaktube.batcave.net" class="links">PospakTube |</a>
 <a href="http://pospaklyrics.batcave.net" class="links">PospakLyrics |</a>
 <a href="http://mimajspocreate.batcave.net" class="links">MIMAJSPO Create |</a>
-<a href="https://skipa-is.skauting.cz" class="links">Škípa-Is |</a>
+<a href="https://skipa-is.skauting.cz" class="links">Škípa-Is </a><span>|</span>
 <a href="http://strava-citrak.125mb.com" class="links">CitrakStrava</a>
