--- a/www/styles.css
+++ b/www/styles.css
@@ -165,6 +165,11 @@ input[type="password"]{
     background: transparent;
 }
 input[type="submit"]{
+    text-decoration: none;
+    color: white;
+}
+
+input[type="submit"]:hover{
     width: 100%;
     padding: 10px;
     margin: 10px 0;
@@ -173,11 +178,7 @@ input[type="submit"]{
     background-color: #02f869;
     color: white;
     cursor: pointer;
-}
-
-input[type="submit"]:hover{
-    background-color: #02f869;
-    color: white;
+    transition: all 0.3s ease;
 }
 
 /************Grid layout (60% chatGPT)**************/
