--- a/www/styles.css
+++ b/www/styles.css
@@ -167,6 +167,7 @@ input[type="password"]{
 input[type="submit"]{
     text-decoration: none;
     color: white;
+    background: transparent;
 }
 
 input[type="submit"]:hover{
