--- a/www/styles.css
+++ b/www/styles.css
@@ -168,6 +168,7 @@ input[type="submit"]{
     text-decoration: none;
     color: white;
     background: transparent;
+    border: none;
 }
 
 input[type="submit"]:hover{
