--- a/www/views/login.phtml
+++ b/www/views/login.phtml
@@ -18,3 +18,5 @@ if(!isset($url)&& $url !="skipaIs"):
     <?php endif; ?>
     </div>
 <div class="column"></div></div>
+
+<script src="script.js"></script>
