--- a/www/views/login.phtml
+++ b/www/views/login.phtml
@@ -3,8 +3,8 @@
 <div class="column"></div>
 <div class="column">
 <form action="" method="post">
-    <input type="text" name="username" id="">
-    <input type="password" name="password" id="">
+    <input type="text" name="username" id="" required>
+    <input type="password" name="password" id="" required>
     <input type="submit" value="Přihlásit se">
 </form>
 <br><br>
