co jsem tomu provedl??

--- a/www/views/login.phtml
+++ b/www/views/login.phtml
@@ -10,7 +10,7 @@
 <br><br>
 <?php
 
-if(!isset($url)&& $url !="skipaIs"):
+if(!isset($url) || $url !="skipaIs"):
     ?>
     <p>
         Jsi tu nový? <a href="register/<?=$url?>" class="links">Zaregistruj se!</a>
