--- a/www/views/register.phtml
+++ b/www/views/register.phtml
@@ -1,9 +1,11 @@
-<div class="container">
 <h1>Registrace | <?=$url?></h1>
+<div class="container">
 <form action="" method="post">
-    <input type="text" name="username" id="">
-    <input type="email" name="email" id="">
-    <input type="password" name="password" id="">
-    <input type="submit" name="submit" value="">
+    <input type="text" name="username" id="" required>
+    <input type="email" name="email" id="" required>
+    <input type="password" name="password" id="" required>
+    <input type="submit" name="submit" value="Registrovat!" required>
 </form>
+
 </div>
+<script src="script.js"></script>
