--- a/www/views/register.phtml
+++ b/www/views/register.phtml
@@ -1,11 +1,14 @@
 <h1>Registrace | <?=$url?></h1>
 <div class="container">
+<div class="column"></div>
+<div class="column">
 <form action="" method="post">
     <input type="text" name="username" id="" required>
     <input type="email" name="email" id="" required>
     <input type="password" name="password" id="" required>
     <input type="submit" name="submit" value="Registrovat!" required>
 </form>
-
+</div>
+<div class="column"></div>
 </div>
 <script src="script.js"></script>
