--- a/www/views/register.phtml
+++ b/www/views/register.phtml
@@ -3,12 +3,21 @@
 <div class="column"></div>
 <div class="column">
 <form action="" method="post">
-    <input type="text" name="username" id="" required>
-    <input type="email" name="email" id="" required>
-    <input type="password" name="password" id="" required>
+    <input type="text" name="username" id="" required placeholder="Uživatelské jméno" data-tippy-content="Vytvoř si jedinečné uživatelské jméno pomocí něhož se budeš příště přihlašovat">
+    <input type="email" name="email" id="" required placeholder="Email" data-tippy-content="<b>Tato emailová adresa musí být funkční!</b> Přijde ti na ni ověřovací odkaz. Bez ověření pomocí odkazu nebude tvůj účet fungovat!">
+    <input type="password" name="password" id="" required placeholder="Heslo" data-tippy-content="Svoje heslo si dobře zapamatuj, nějakou dobu nepůjde změnit!">
+    <input type="password" name="passVerify" id="" required placeholder="Ověření hesla" data-tippy-content="Prosím ověř heslo, které jsi zadal výše, aby byla větší šance že si ho zapamatuješ. Pokud se heslo nebude shodovat, nebudeš se moci zaregistrovat!">
     <input type="submit" name="submit" value="Registrovat!" required>
 </form>
 </div>
 <div class="column"></div>
 </div>
 <script src="script.js"></script>
+<script src="https://unpkg.com/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+    <script src="https://unpkg.com/tippy.js@6.3.1/dist/tippy-bundle.umd.min.js"></script>
+<script>
+  tippy('[data-tippy-content]', {
+            allowHTML: true,
+        });
+
+</script>
