--- a/www/views/register.phtml
+++ b/www/views/register.phtml
@@ -2,7 +2,7 @@
 <div class="container">
 <div class="column"></div>
 <div class="column">
-<form action="/register" method="post">
+<form action="" method="post">
     <input type="text" name="username" id="" required placeholder="Uživatelské jméno" data-tippy-content="Vytvoř si jedinečné uživatelské jméno pomocí něhož se budeš příště přihlašovat">
     <input type="email" name="email" id="" required placeholder="Email" data-tippy-content="<b>Tato emailová adresa musí být funkční!</b> Přijde ti na ni ověřovací odkaz. Bez ověření pomocí odkazu nebude tvůj účet fungovat!">
     <input type="password" name="password" id="" required placeholder="Heslo" data-tippy-content="Svoje heslo si dobře zapamatuj, nějakou dobu nepůjde změnit!">
