--- a/www/views/register.phtml
+++ b/www/views/register.phtml
@@ -7,7 +7,7 @@
     <input type="email" name="email" id="" required placeholder="Email" data-tippy-content="<b>Tato emailová adresa musí být funkční!</b> Přijde ti na ni ověřovací odkaz. Bez ověření pomocí odkazu nebude tvůj účet fungovat!">
     <input type="password" name="password" id="" required placeholder="Heslo" data-tippy-content="Svoje heslo si dobře zapamatuj, nějakou dobu nepůjde změnit!">
     <input type="password" name="passVerify" id="" required placeholder="Ověření hesla" data-tippy-content="Prosím ověř heslo, které jsi zadal výše, aby byla větší šance že si ho zapamatuješ. Pokud se heslo nebude shodovat, nebudeš se moci zaregistrovat!">
-    <input type="submit" name="submit" value="Registrovat!">
+    <input type="submit" name="submit" value="Registrovat!" required>
 </form>
 </div>
 <div class="column"></div>
