--- a/www/views/register.phtml
+++ b/www/views/register.phtml
@@ -12,7 +12,7 @@
 </div>
 <div class="column"></div>
 </div>
-<script src="RegScript.js"></script>
+<script src="script.js"></script>
 <script src="https://unpkg.com/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://unpkg.com/tippy.js@6.3.1/dist/tippy-bundle.umd.min.js"></script>
 <script>
