--- a/www/views/login.phtml
+++ b/www/views/login.phtml
@@ -5,7 +5,7 @@
 <form action="" method="post">
     <input type="text" name="username" id="" required>
     <input type="password" name="password" id="" required>
-    <input type="submit" value="Přihlásit se">
+    <input type="submit" value="Přihlásit se" name="submit">
 </form>
 <br><br>
 <?php
