--- a/www/styles.css
+++ b/www/styles.css
@@ -60,7 +60,138 @@ h2{
     margin: 20px 0;
 
 }
+#profile-link{
+   
+    right:0;
+      position: fixed;
+  }
+  
+  .profile-menu{
+      right:0;
+      position: fixed;
+      top: 40px;
+  }
 
+  .profile-img{
+    border-radius: 50px;
+    padding: 2px;
+    transition: padding 0.5s;
+        height: 40px;
+        width:40px;
+    }
+
+.profile-img-contacts{
+    border-radius: 50px;
+    padding: 2px;
+    transition: padding 0.5s;
+        height: 40px;
+        width:40px;
+}
+
+.profile-img-contacts{
+
+        
+
+        border: 2px solid rgba(255, 255, 255, 0.5);
+            background-color: rgba(255, 255, 255, 0.5);
+            border-radius: 50px;
+            padding: 2px;
+            transition: padding 0.5s;
+                height: 40px;
+                width:40px;
+            }
+            
+#profile {
+                background-color: orange;
+                border-radius: 10px;
+                color: white;
+                padding: 5px;
+                margin: 0 auto;
+              }
+#profileContainer {
+                display: inline-block;
+                background-color: #333333;
+                color: white;
+                border-radius: 10px;
+              }
+
+.profileHead{
+    color: white;
+    text-align: center;
+}
+
+.profile-img-cover{
+    border-radius: 49% 51% 48% 52% / 23% 41% 59% 77%;
+    padding: 2px;
+    height: 200px;
+    width: 200px;
+}
+
+.profile{
+    border: 2px solid white;
+    background-color: white;
+    border-radius: 5px 6px 4px 2px;
+    padding: 2px;
+    transition: padding 0.5s;
+    color:black;
+}
+
+.profile:hover{
+    padding: 10px;
+    
+}
+
+.profile-contacts{
+    border: 2px solid rgba(255, 255, 255, 0.5);
+    background-color: rgba(255, 255, 255, 0.5);
+    border-radius: 5px 6px 4px 2px;
+    padding: 2px;
+    transition: padding 0.5s;
+    color:black;
+}
+.profile-contacts:hover{
+    padding: 10px;
+    
+}
+
+.profile:hover{
+    padding: 10px;
+    
+}
+
+.profile-contacts{
+    border: 2px solid rgba(255, 255, 255, 0.5);
+    background-color: rgba(255, 255, 255, 0.5);
+    border-radius: 5px 6px 4px 2px;
+    padding: 2px;
+    transition: padding 0.5s;
+    color:black;
+}
+
+.profile-contacts:hover{
+    padding: 10px;
+    
+}
+
+.profileTB{
+    
+    display:inline-block;
+    
+    
+    background-color:rgba(0, 0, 0, 0.54);
+    
+    backdrop-filter:blur(10px);
+    border-radius:10px;
+    padding:5px;
+    -webkit-text-fill-color: white;
+    
+    -webkit-text-stroke: 0.5px orange;
+    font-family: "Pacifico", cursive;
+    font-style: oblique;
+    
+    }
+
+/***********************************************/
 a, .links{
     text-decoration: none;
     color: white;
@@ -199,5 +330,140 @@ input[type="submit"]{
     padding: 10px;
 
 }
+
+/***********************************************/
+
+/************Profile**************/
+
+#profile-link{
+   
+    right:0;
+      position: fixed;
+  }
+  
+  .profile-menu{
+      right:0;
+      position: fixed;
+      top: 40px;
+  }
+
+  .profile-img{
+    border-radius: 50px;
+    padding: 2px;
+    transition: padding 0.5s;
+        height: 40px;
+        width:40px;
+    }
+
+.profile-img-contacts{
+    border-radius: 50px;
+    padding: 2px;
+    transition: padding 0.5s;
+        height: 40px;
+        width:40px;
+}
+
+.profile-img-contacts{
+
+        
+
+        border: 2px solid rgba(255, 255, 255, 0.5);
+            background-color: rgba(255, 255, 255, 0.5);
+            border-radius: 50px;
+            padding: 2px;
+            transition: padding 0.5s;
+                height: 40px;
+                width:40px;
+            }
+            
+#profile {
+                background-color: #02f869;;
+                border-radius: 10px;
+                color: white;
+                padding: 5px;
+                margin: 0 auto;
+              }
+#profileContainer {
+                display: inline-block;
+                background-color: #333333;
+                color: white;
+                border-radius: 10px;
+              }
+
+.profileHead{
+    color: white;
+    text-align: center;
+}
+
+.profile-img-cover{
+    border-radius: 49% 51% 48% 52% / 23% 41% 59% 77%;
+    padding: 2px;
+    height: 200px;
+    width: 200px;
+}
+
+.profile{
+    border: 2px solid white;
+    background-color: white;
+    border-radius: 5px 6px 4px 2px;
+    padding: 2px;
+    transition: padding 0.5s;
+    color:black;
+}
+
+.profile:hover{
+    padding: 10px;
+    
+}
+
+.profile-contacts{
+    border: 2px solid rgba(255, 255, 255, 0.5);
+    background-color: rgba(255, 255, 255, 0.5);
+    border-radius: 5px 6px 4px 2px;
+    padding: 2px;
+    transition: padding 0.5s;
+    color:black;
+}
+.profile-contacts:hover{
+    padding: 10px;
+    
+}
+
+.profile:hover{
+    padding: 10px;
+    
+}
+
+.profile-contacts{
+    border: 2px solid rgba(255, 255, 255, 0.5);
+    background-color: rgba(255, 255, 255, 0.5);
+    border-radius: 5px 6px 4px 2px;
+    padding: 2px;
+    transition: padding 0.5s;
+    color:black;
+}
+
+.profile-contacts:hover{
+    padding: 10px;
+    
+}
+
+.profileTB{
+    
+    display:inline-block;
+    
+    
+    background-color:rgba(0, 0, 0, 0.54);
+    
+    backdrop-filter:blur(10px);
+    border-radius:10px;
+    padding:5px;
+    -webkit-text-fill-color: white;
+    
+    -webkit-text-stroke: 0.5px orange;
+    font-family: "Pacifico", cursive;
+    font-style: oblique;
+    
+    }
 
 /***********************************************/
