--- a/www/views/profile.phtml
+++ b/www/views/profile.phtml
@@ -2,33 +2,44 @@
 <!-- main container -->
 <div class="container">
     <!-- left column -->
-<div class="column"><div id="profile">
-    <div class="container">
-        <div class="column"></div>
-        <div class="column">
-    <a href="change/photo"><img src="<?=$data["profilePhoto"]?>" alt="profile-img-<?=$data["username"]?>" class="profile-img-cover"></a>
-    <h2><a href="change/username"><img src="username.svg" height="50" width="50" alt="username-icon"><?=$data["username"]?></a><br></h2>    
-</div>
-</div>
-</div>
+    <div class="column">
 
-<!-- middle column -->
-<div class="column">
-<div id="profile">
-    <!-- username -->
-        
-        <!-- password -->
-        <a href="change/password"><img src="password.svg" height="50" width="50" alt="password-icon"><p id="passwordField"><?=$data["password"]?></p></a>
-        <!--password visibility switch -->
-        <img id="eye" alt="show-icon" onclick="togglePasswordVisibility('passwordField')" style="cursor: pointer;" width="20px" height="20px"><br>
-        <!-- email -->
-        <a href="change/email"><img src="email.png" alt="email-icon" width="50" height="50"><?=$data["email"]?></a><br>
-        
-</div>
-</div>
-<!-- right column -->
-<div class="column"></div>
+        <div id="profile">
+            <div class="container">
+                <!-- left column -->
+                <div class="column"></div>
+                <!-- middle column -->
+                <div class="column">
 
+                    <a href="change/photo"><img src="<?=$data["profilePhoto"]?>" alt="profile-img-<?=$data["username"]?>" class="profile-img-cover"></a>
+                    <h2><a href="change/username"><img src="username.svg" height="50" width="50" alt="username-icon"><?=$data["username"]?></a><br></h2>    
+    
+                </div>
+            
+                <!-- right column -->
+                <div class="column"></div>
+
+            </div>
+        </div>
+    </div>
+
+    <!-- middle column -->
+    <div class="column">
+
+        <div id="profile">
+            <!-- password -->
+            <a href="change/password"><img src="password.svg" height="50" width="50" alt="password-icon"><p id="passwordField"><?=$data["password"]?></p></a>
+            <!--password visibility switch -->
+            <img id="eye" alt="show-icon" onclick="togglePasswordVisibility('passwordField')" style="cursor: pointer;" width="20px" height="20px"><br>
+            <!-- email -->
+            <a href="change/email"><img src="email.png" alt="email-icon" width="50" height="50"><?=$data["email"]?></a><br>
+        
+        </div>
+    </div>
+    <!-- right column -->
+    <div class="column"></div>
+
+</div>
 <script>
     
     var eye = document.getElementById("eye");
