--- a/www/views/profile.phtml
+++ b/www/views/profile.phtml
@@ -10,9 +10,7 @@
                 <div class="column"></div>
                 <!-- middle column -->
                 <div class="column">
-
-                    <a href="change/photo"><img src="<?=$data["profilePhoto"]?>" alt="profile-img-<?=$data["username"]?>" class="profile-img-cover"></a>
-                    <h2><a href="change/username"><img src="username.svg" height="50" width="50" alt="username-icon"><?=$data["username"]?></a><br></h2>    
+                    <h2><a href="change/username"><a href="change/photo"><img src="<?=$data["profilePhoto"]?>" alt="profile-img-<?=$data["username"]?>" class="profile-img"></a><img src="username.svg" height="50" width="50" alt="username-icon"><?=$data["username"]?></a><br></h2>    
     
                 </div>
             
