ne tak takhle??

--- a/www/views/profile.phtml
+++ b/www/views/profile.phtml
@@ -10,7 +10,7 @@
                 <div class="column"></div>
                 <!-- middle column -->
                 <div class="column">
-                    <h2><a href="change/username"><a href="change/photo"><img src="<?=$data["profilePhoto"]?>" alt="profile-img-<?=$data["username"]?>" class="profile-img"></a><?=$data["username"]?></a><br></h2>    
+                    <h2><a href="change/photo"><img src="<?=$data["profilePhoto"]?>" alt="profile-img-<?=$data["username"]?>" class="profile-img"></a><a href="change/username"><?=$data["username"]?></a></h2>    
     
                 </div>
             
