--- a/www/views/profile.phtml
+++ b/www/views/profile.phtml
@@ -2,35 +2,34 @@
 <!-- main container -->
 <div class="container">
     <!-- left column -->
+    <div class="column"></div>
+
+    <!-- middle column -->
     <div class="column">
 
         <div id="profile">
-            <div class="container">
+        <div class="container">
                 <!-- left column -->
                 <div class="column"></div>
                 <!-- middle column -->
                 <div class="column">
-                    <h2><a href="change/photo"><img src="<?=$data["profilePhoto"]?>" alt="profile-img-<?=$data["username"]?>" class="profile-img"></a><a href="change/username"><?=$data["username"]?></a></h2>    
-    
+                    <h2><a href="change/photo"><img src="<?=$data["profilePhoto"]?>" alt="profile-img-<?=$data["username"]?>" class="profile-img-cover"></a><a href="change/username"><?=$data["username"]?></a></h2>    
+                    
+                    <!-- password -->
+                    <a href="change/password"><img src="password.svg" height="50" width="50" alt="password-icon"><p id="passwordField"><?=$data["password"]?></p></a>
+                    <!--password visibility switch -->
+                    <img id="eye" alt="show-icon" onclick="togglePasswordVisibility('passwordField')" style="cursor: pointer;" width="20px" height="20px"><br>
+                    
+                    <!-- email -->
+                    <a href="change/email"><img src="email.png" alt="email-icon" width="50" height="50"><?=$data["email"]?></a><br>
                 </div>
             
                 <!-- right column -->
                 <div class="column"></div>
 
             </div>
-        </div>
-    </div>
-
-    <!-- middle column -->
-    <div class="column">
-
-        <div id="profile">
-            <!-- password -->
-            <a href="change/password"><img src="password.svg" height="50" width="50" alt="password-icon"><p id="passwordField"><?=$data["password"]?></p></a>
-            <!--password visibility switch -->
-            <img id="eye" alt="show-icon" onclick="togglePasswordVisibility('passwordField')" style="cursor: pointer;" width="20px" height="20px"><br>
-            <!-- email -->
-            <a href="change/email"><img src="email.png" alt="email-icon" width="50" height="50"><?=$data["email"]?></a><br>
+     
+            
         
         </div>
     </div>
