--- a/www/views/profile.phtml
+++ b/www/views/profile.phtml
@@ -1,4 +1,4 @@
-
+<img src="back.png" data-tippy-content="Zpět na hlavní stránku" alt="">
 <!-- main container -->
 <div class="container">
     <!-- left column -->
@@ -54,3 +54,11 @@
         }
     }
         </script>
+        <script src="https://unpkg.com/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+    <script src="https://unpkg.com/tippy.js@6.3.1/dist/tippy-bundle.umd.min.js"></script>
+<script>
+  tippy('[data-tippy-content]', {
+            allowHTML: true,
+        });
+
+</script>
