ještě ten odkaz by to chtělo, že?? xD

--- a/www/views/profile.phtml
+++ b/www/views/profile.phtml
@@ -1,8 +1,8 @@
-<img src="back.png" data-tippy-content="Zpět na hlavní stránku" alt="">
+
 <!-- main container -->
 <div class="container">
     <!-- left column -->
-    <div class="column"></div>
+    <div class="column"><a href="http://pospaktube.batcave.net"><img src="back.png" data-tippy-content="Zpět na hlavní stránku" alt=""></a></div>
 
     <!-- middle column -->
     <div class="column">
