--- a/www/views/login.phtml
+++ b/www/views/login.phtml
@@ -1,9 +1,9 @@
 <?php
-if($user == "skipaIs"){
-    $user = "Škípa - Is";
+if($url == "skipaIs"){
+    $url = "Škípa - Is";
 }
 ?>
-<h1>Přihlášení | <?=$user?></h1>
+<h1>Přihlášení | <?=$url?></h1>
 <div class="container">
 <div class="column"></div>
 <div class="column">
