--- a/www/views/login.phtml
+++ b/www/views/login.phtml
@@ -15,10 +15,8 @@ if($url == "skipaIs"){
 <br><br>
 <?php
 
-if(!isset($url) || $url !="skipaIs"):
+if($url !="Škípa - Is"):
     ?>
-
-    
     <p>
         Jsi tu nový? <a href="register/<?=$url?>" class="links">Zaregistruj se!</a>
     </p>
