--- a/www/styles.css
+++ b/www/styles.css
@@ -34,8 +34,7 @@ body{
 body{
    background-color: #000;
     font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
+margin: 20px;
     text-align: center;
 }
 
