--- a/www/views/profile.phtml
+++ b/www/views/profile.phtml
@@ -16,7 +16,7 @@
                     <h2><a href="change/photo"><img src="<?=$data["profilePhoto"]?>" alt="profile-img-<?=$data["username"]?>" class="profile-img-cover"></a><a href="change/username"><?=$data["username"]?></a></h2>    
                     
                     <!-- password -->
-                    <a href="change/password"><img src="password.svg" height="50" width="50" alt="password-icon"><p id="passwordField"><?=$data["password"]?></p></a>
+                    <a href="change/password"><img src="password.svg" height="50" width="50" alt="password-icon"><p id="passwordField">V aktuální verzi nemůžeš své heslo zobrazit. Na aktualizaci se pracuje!</p></a>
                     <!--password visibility switch -->
                     <img id="eye" alt="show-icon" onclick="togglePasswordVisibility('passwordField')" style="cursor: pointer;" width="20px" height="20px"><br>
                     
