--- a/www/views/login.phtml
+++ b/www/views/login.phtml
@@ -15,7 +15,7 @@ if($url == "skipaIs"){
 <br><br>
 <?php
 
-if($url !="Škípa - Is"):
+if(!isset($url)||$url !="Škípa - Is"):
     ?>
     <p>
         Jsi tu nový? <a href="register/<?=$url?>" class="links">Zaregistruj se!</a>
