--- a/www/views/login.phtml
+++ b/www/views/login.phtml
@@ -20,6 +20,10 @@ if(!isset($url)||$url !="Škípa - Is"):
     <p>
         Jsi tu nový? <a href="register/<?=$url?>" class="links">Zaregistruj se!</a>
     </p>
+    <?php elseif($url == "Škípa - Is"): ?>
+    <p>
+        Zapomněl jsi heslo? <a href="https://skipa-is.skauting.cz/pass-recovery" class="links">Obnov si ho!</a>
+    </p>
     <?php endif; ?>
     </div>
 <div class="column"></div></div>
