--- a/www/views/main.phtml
+++ b/www/views/main.phtml
@@ -6,7 +6,5 @@
 </h3>
 <br><br>
 <a href="http://pospaktube.batcave.net" class="links">PospakTube </a><span>|</span>
-<a href="http://pospaklyrics.batcave.net" class="links">PospakLyrics </a><span> |</span>
-<a href="http://mimajspocreate.batcave.net" class="links">MIMAJSPO Create </a><span>|</span>
+<a href="http://pospaks-fantasy-hub.batcave.net" class="links"></a>
 <a href="https://skipa-is.skauting.cz" class="links">Škípa-Is </a><span>|</span>
-<a href="http://strava-citrak.125mb.com" class="links">CitrakStrava</a>
