--- a/www/views/main.phtml
+++ b/www/views/main.phtml
@@ -6,5 +6,7 @@
 </h3>
 <br><br>
 <a href="http://pospaktube.batcave.net" class="links">PospakTube </a><span>|</span>
-<a href="http://pospaks-fantasy-hub.batcave.net" class="links"></a>
+
 <a href="https://skipa-is.skauting.cz" class="links">Škípa-Is </a><span>|</span>
+<a href="http://pospaks-fantasy-hub.batcave.net" class="links">POSPAK's Fantasy Hub</a><span>|</span>
+<a href="http://mcmod.tekcities.com" class="links">LOTR mód by POSPÁK 65</a>
