změna stylů přihlášení

--- a/www/styles.css
+++ b/www/styles.css
@@ -205,7 +205,7 @@ a,
 }
 
 /* Main Content Styles */
-main {
+form{
     background: rgba(255, 255, 255, 0.2); /* Transparent white background */
     backdrop-filter: blur(10px); /* Background blur */
     -webkit-backdrop-filter: blur(10px); /* Background blur for Safari */
@@ -214,8 +214,14 @@ main {
     border-radius: 10px; /* Rounded corners */
     padding: 20px; /* Inner padding */
     color: #fff; /* White text */
+    width: 50%;
+
 }
 
+/* main {
+ 
+}
+ */
 /* Input Styles */
 input[type="text"],
 input[type="password"],
