--- a/www/styles.css
+++ b/www/styles.css
@@ -15,7 +15,7 @@
 body {
     color: white;
     background-image: url("/images/login.jpg");
-    background-size: auto;
+    background-size:cover;
     font-family: Arial, sans-serif;
     margin: 20px;
     text-align: center;
