--- a/www/views/login.phtml
+++ b/www/views/login.phtml
@@ -16,7 +16,7 @@ if($url == "skipaIs"){
 <br><br>
 <?php
 
-if(!isset($url)||$url !="Škípa - Is"):
+if(!isset($url)||$url =="pospakTube"):
     ?>
     <p>
         Jsi tu nový? <a href="register/<?=$url?>" class="links">Zaregistruj se!</a>
