--- a/www/views/login.phtml
+++ b/www/views/login.phtml
@@ -29,7 +29,7 @@ if(!isset($url)||$url =="pospakTube"):
     </div>
 <div class="column"></div></div>
 
-<script src="script.js"></script>
+<script src="script.js?v=2.9"></script>
 <script src="https://unpkg.com/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://unpkg.com/tippy.js@6.3.1/dist/tippy-bundle.umd.min.js"></script>
 <script>
